DTO and mapper layers + fixes